# internal/common/dto/chat_members.go
@@ -1,0 +1,6 @@
+package dto
+
+type ChatMembersBody struct {
+	ChatId  string `json:"chatId" binding:"reqiured"`
+	Content string `json:"workbookname" binding:"required"`
+}
